--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js"
   },
@@ -19,7 +20,8 @@
   },
   "homepage": "https://github.com/eldesernauta/mstr-api#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonschema": "^1.4.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
